--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "redux": "^5.0.1",
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.11",
+    "swiper": "^11.1.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
